   detaching from itself.
 - Add support for multiple simultaneous contests.
 - Allow to add restrictions on contests, problems and languages to
   judgehosts.
 - Add optional per problem memory/output limits (Closes #152).
 - Allow storing optional descriptive image for each test case.
 - Root is not required anymore for 'make install'.

Version 4.0.0 - 22 July 2014
----------------------------
 - Fix chroot create script when using an APT proxy.
 - Fix broken link to problem download for teams and public.
 - Small tweaks to new judgehost load display.
 - Display problem/language name instead of ID above submission lists.
 - Install ACE and flot Javascript library files.
 - Rename SQL upgrade snippet to release name.
 - A few miscellaneous minor code improvements.

Version 4.0.0 Release Candidate 1 - 8 July 2014
-----------------------------------------------
 - checktestdata logical operators are now '&&' and '||'.
 - Introduce REST API; used by judgedaemon and submit client to communicate
   with domserver. API is not officially declared 'stable' at this point.
 - Removed submitdeamon; submit client now always uses the REST API.
 - Removed xml plugin interface; use the REST API instead.
 - Move nearly all judgehost configuration to the database, making it
   controllable centrally from the DOMjudge web interface, including all
   compile and check scripts.
 - Problem, team and affiliation now have a numeric auto-incrementing ID.
   Problem short names now need to be unique per contest, but not globally.
 - Redesign authentication system: there's a single set of users for all
   interfaces, which may have different roles, such as team or admin.
 - Submitclient now also works with user/password authentication.
 - New authentication scheme 'external' leverages Apache to provide a
   REMOTE_USER value.
 - New scoreboard layout: more compact, affil. logos replaced by names.
 - Store timestamps in database as Unix epoch, independent of time zones